--- a/homeworks/hw1/mywebsite/index.html
+++ b/homeworks/hw1/mywebsite/index.html
@@ -15,7 +15,8 @@
 
           </ul>
           
-        <img src=”img/selfie.jpg” />
+        <img src=”assets/img/selfie.png” />
+        <a href="https://bcourses.berkeley.edu/">Bcourses</a>
         <p>Reading Responses:</p>
         <ul>
             <li>I learned a useful trick to help my design thinking. I hadn't paid much attention to how the apps I use are laid out, and I thought it would actually be useful to keep this in mind!</li>
