--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -14,8 +14,9 @@
             <li>Freshroll</li>
 
           </ul>
-          
-        <img src=”assets/img/selfie.png” />
+        <section>
+            <img src="assets/img/selfie.png" width="400" height="500"/>
+        </section>  
         <a href="https://bcourses.berkeley.edu/">Bcourses</a>
         <p>Reading Responses:</p>
         <ul>
