--- a/homeworks/hw2/hw2-starter/wireframes.html
+++ b/homeworks/hw2/hw2-starter/wireframes.html
@@ -20,13 +20,13 @@
 					<ul>
 						<li>
 							<p>Using the favorite website you chose in homework 1, create a wireframe for one page of it using pen/paper, PowerPoint, or any your tool of choice. (use the 'img' tag!) Make sure to let us know what the name of your website is (Use the 'p' tag!)</p>
-							<img src=”assets/imgs/wireframe_before.png” />
+							<img src="assets/imgs/wireframe_before.png" />
 							<p> Bcourses </p>
 						</li>
 
 						<li>
 							<p>Try to improve the website you've chosen, and create a redesigned wireframe of one page for the same website using the principles of visual hierarchy that you learned from the article.</p>
-							<img src=”assets/imgs/wireframe_after.png” />
+							<img src="assets/imgs/wireframe_after.png" />
 						</li>
 					</ul>
 
