--- a/homeworks/hw2/design_responses.html
+++ b/homeworks/hw2/design_responses.html
@@ -20,17 +20,17 @@
 					<ul>
 						<li>
 							<p>What is something you learned from this article? (3-4 sentences)</p>
-							<p> [INSERT YOUR RESPONSE HERE] </p>
+							<p> I learned about the applications and uses of padding/white space! I was never quite aware of white space, and didn't really think it was that important. After reading this article though, I can see how the white space plays such an important role in the layout & readability of the page. </p>
 						</li>
 
 						<li>
 							<p>What was your favorite part of this article? (3-4 sentences)</p>
-							<p> [INSERT YOUR RESPONSE HERE] </p>
+							<p> I really liked the examples that they gave! The side-by-side images of the wayfair rug page made it super clear and easy to understand the importance of appropriate margins and white space. It was also interesting to think about limited space on the page & how to choose which elements to include and not! </p>
 						</li>
 
 						<li>
 							<p>Copy and paste a quote you found compelling, interesting, or cool</p>
-							<p> [INSERT YOUR RESPONSE HERE] </p>
+							<p> "Unfortunately, we do not always have the luxury of this kind of white space. This is a rarity, so enjoy it while it lasts." </p>
 						</li>
 					</ul>
 
@@ -38,7 +38,7 @@
 					<ul>
 						<li>
 							<p>On a scale from 1 to 10, how much did you enjoy reading this article? If you scored below a five, please briefly explain why.</p>
-							<p> [INSERT YOUR RESPONSE HERE] </p>
+							<p> 9 </p>
 						</li>
 					</ul>
 				</div>
