--- a/homeworks/hw2/index.html
+++ b/homeworks/hw2/index.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
 		<title>Fiddling with shapes</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-
+		<!-- What file should we link in this <head> tag? -->
 	</head>
 <body>
 	<div id="container">
@@ -46,6 +45,7 @@
 			<div class="circle green"></div>
 		</div>
 
+		<li><a href="design_responses.html">Click to view design responses</a></li>
 		<li><a href="wireframes.html">Click to view wireframe responses</a></li>
 	</div>
 </body>
