--- a/homeworks/hw2/wireframes.html
+++ b/homeworks/hw2/wireframes.html
@@ -20,13 +20,12 @@
 					<ul>
 						<li>
 							<p>Using the favorite website you chose in homework 1, create a wireframe for one page of it using pen/paper, PowerPoint, or any your tool of choice. (use the 'img' tag!) Make sure to let us know what the name of your website is (Use the 'p' tag!)</p>
-							<img src="assets/imgs/wireframe_before.png" />
-							<p> Bcourses </p>
+							<p> [INSERT YOUR WIREFRAMES HERE] </p>
 						</li>
 
 						<li>
 							<p>Try to improve the website you've chosen, and create a redesigned wireframe of one page for the same website using the principles of visual hierarchy that you learned from the article.</p>
-							<img src="assets/imgs/wireframe_after.png" />
+							<p> [INSERT YOUR WIREFRAMES HERE] </p>
 						</li>
 					</ul>
 
@@ -34,12 +33,12 @@
 					<ul>
 						<li>
 							<p>What is the goal of the website? Who is it intended for? How does the design accomplish this? Write 2-3 sentences answering these questions. (Use the 'p' tag again!)</p>
-							<p> The goal of the website is for students to access files and homework in a common hub. The design accomplishes this by creating separate pages for each of the respective classes. </p>
+							<p> [INSERT YOUR RESPONSE HERE] </p>
 						</li>
 
 						<li>
 							<p>Write 2-3 sentences about what problems your redesign addressed, and how it solved them.</p>
-							<p> In my redesign, I reduced the amount of icons found on the left side menu bar. I did this to address the problem that there is little negative space in the menu bar, making it cluttered and difficult to view. I also created a calendar view on the bottom of the dashboard to help with visual hierarchy. </p>
+							<p> [INSERT YOUR RESPONSE HERE] </p>
 						</li>
 						<p><strong>NOTE:</strong> Make sure to include the wireframe images in the website and don't just put it in your assets folder!</p></li>
 						<p>Your wireframes should look something like this:</p>
