--- a/homeworks/hw2/index.html
+++ b/homeworks/hw2/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<title>Fiddling with shapes</title>
-		<!-- What file should we link in this <head> tag? -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+
 	</head>
 <body>
 	<div id="container">
@@ -45,8 +46,8 @@
 			<div class="circle green"></div>
 		</div>
 
-		<li><a href="design_responses.html">Click to view design responses</a></li>
 		<li><a href="wireframes.html">Click to view wireframe responses</a></li>
+		<li><a href="design_responses.html">Click to view design responses</a></li>
 	</div>
 </body>
 </html>
