--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/initial.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+	<div id="content">
+		<div id="navbar">
+			<div class="navbar-item">Home</div>
+			<div class="navbar-item">Discover</div>
+			<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic">
+				<img src="assets/img/selfie.png" />
+			</div>
+			<div id="information">
+				<div id="name">Joanne Shin</div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					<!-- Replace the lorem ipsum filler text and write your about me here! -->
+					No amount of pain can kill my love for Oski :)
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item"><img src="assets/img/oski1.jpg" /></div>
+				<div class="item"><img src="assets/img/oski2.jpg" /></div>
+				<div class="item"><img src="assets/img/oski3.jpg" /></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="assets/img/oski4.jpg" /></div>
+				<div class="item"><img src="assets/img/oski5.jpg" /></div>
+				<div class="item"><img src="assets/img/oski6.jpg" /></div>
+			</div>
+		</div>
+	</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+	</body>
 </html>
