--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,6 +1,57 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    </head>
     <body>
-        MIDTERM
+        <header>
+            <div class="header">
+                <div id="logo_image"></div>
+                    <img id="logo_image" src="assets/img/logo.png">
+                <a href="index.html" target="_self"><div id="gypsy">Gypsy’s Trattoria Italiana</div></a>
+                <a href="menu_page.html" target="_self"><div id="menus">Menu</div></a>
+                <a href="catering_page.html" target="_self"><div id="menus">Catering</div></a>
+                <a href="contact_page.html" target="_self"><div id="menus">Contact</div></a>
+			</div>   
+        </header>
+        <div class="section1">
+            <div id="title_text">
+                Choose from more than 70+<br>
+                freshly prepared dishes.</div>
+            <a href="menu_page.html">
+                <img id="view_menu_button" src="assets/img/view menu button.png">
+            </a>
+            <img id="pasta_image" src="assets/img/pasta.png"> 
+        </div>
+        <div class="section2">
+            <div id="title_text">Catered to your needs.</div>
+            <div id="header_1">Let us plan and prepare a high quality, <br>
+                affordable menu for your meetings and parties!</div>
+            <a href="catering_page.html">
+                <img id="view_catering_button" src="assets/img/view catering button.png">
+            </a>
+            <img id="catering_image" src="assets/img/catering.png">
+        </div>
+        <div class="section3">
+            <div id="title_text">Where to find us:</div>
+            <div class="contactinfo">
+                <img id="phone_image" src="assets/img/phone.png">
+                <div id="header_1">510 548 4860</div>
+            </div>
+            <div class="locationinfo">
+                <img id="location_image" src="assets/img/location.png">
+                <div id="header_1">Gypsy's Trattoria Italiana <br>
+                    2519-A Durant Ave., Berkeley, <br>
+                    CA 94704</div>
+            </div>
+            <img id="map_image" src="assets/img/google_maps.png">
+        </div>
+        <div class="navbar">
+            <div id="normal_text">2519-A Durant Ave., Berkeley, CA 94704<br>
+                Tel: 510 548 4860 | Fax: 510 548 4875</div>
+            <div id="site_designed_by">Site designed by Joanne Shin </div>
+        </div>
     </body>
 </html>
