--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Lab 1
+	<head>
+	</head>
+	<body>
+        <div class="body">
+            <p>
+                Part 1 
+            </p>
+            <p>1. https://nytimes.wd5.myworkdayjobs.com/Tech</p>
+            <p>2. nyt-cheltenham</p>
+            <div class="image">
+                <img src="assets/img/Screen Shot 2022-11-07 at 10.10.53 AM.png" width="800" length="400"/>
+            </div>
+            <p>
+                Part 2 
+            </p>
+            <div class="image">
+                <img src="assets/img/Screen Shot 2022-11-07 at 10.23.32 AM.png" width="600" length="810"/>
+            </div>
+        </div>
     </body>
-</html>
