--- a/homeworks/hw8/index.html
+++ b/homeworks/hw8/index.html
@@ -1,6 +1,55 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Homework 8 - Favorite Songs</title>
+</head>
+
+<body>
+
+<div class="content">
+	<h1>Favorites</h1>
+
+	<!-- Problem 3.1 -->
+	<div id="songs">
+		<ul id="songs-first-half">
+			<li>
+				<div class="song-title">Wurli</div>
+				<div class="song-artist">Dominic Fike</div>
+			</li>
+			<li>
+				<div class="song-title">Maple Syrup</div>
+				<div class="song-artist">The Backseat Lovers</div>
+			</li>
+			<li>
+				<div class="song-title">Sweater Weather</div>
+				<div class="song-artist">The Neighbourhood</div>
+			</li>
+		</ul>
+		<ul id="songs-second-half">
+			<li>
+				<div class="song-title">잠꼬대 (Sleep Talk) (Feat. 오혁 (OHHYUK))</div>
+				<div class="song-artist">Zion. T, 오혁</div>
+			</li>
+			<li>
+				<div class="song-title">Never Ending Story</div>
+				<div class="song-artist">부활</div>
+			</li>
+			<li>
+				<div class="song-title">Plum ft Sega Bodega</div>
+				<div class="song-artist">Omega Sapien, Sega Bodega</div>
+			</li>
+		</ul>
+	</div>
+
+	<button id="toggle-button">Show 3 songs</button>
+	<p>
+		<a href="design_responses.html" style = "color: white"id = "design-response-link">Design Responses Here</a>
+	</p>
+</div>
+
+<script src="assets/js/script.js"></script>
+		
+</body>
+
 </html>
